--- a/Assignment/starter_code/css/style.css
+++ b/Assignment/starter_code/css/style.css
@@ -270,10 +270,12 @@ footer p {
 
 @media screen and (max-width:768px){
   #sidebar {
-    display: none;
+    display: block;
+    position: relative;
   }
   .container {
     width: 100%;
-    margin-right: none;
+    margin: 0 auto;
+    padding: 20px;
   }
 }
