--- a/Assignment/starter_code/css/style.css
+++ b/Assignment/starter_code/css/style.css
@@ -269,6 +269,9 @@ footer p {
 }
 
 @media screen and (max-width:768px){
+  body {
+    font-size: 18px;
+  }
   #sidebar {
     display: block;
     position: relative;
@@ -277,5 +280,9 @@ footer p {
     width: 100%;
     margin: 0 auto;
     padding: 20px;
+  }
+  #hero {
+    height: auto;
+    margin: 20px 0 40px;
   }
 }
